# GiFo-RFC-0127-GAuth-Open-Core-Rust-SDK

./: .replit  CONTRIBUTION-AND-RELEASE-POLICY.md  README.md  replit.md
artifacts/api-server/src/routes/: credentials.ts  health.ts  index.ts  mandates.ts  profiles.ts
artifacts/dashboard/: index.html
artifacts/dashboard/.replit-artifact/: artifact.toml
artifacts/dashboard/src/: App.tsx  index.css
artifacts/dashboard/src/components/: layout.tsx
artifacts/dashboard/src/lib/: auth.tsx
artifacts/dashboard/src/pages/: auth.tsx  credentials.tsx  dashboard.tsx  mandate-detail.tsx  mandates.tsx  poa-map.tsx  profiles.tsx
gauth-rs/: ADDITIONAL-TERMS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
gauth-rs/src/: error.rs  lib.rs
gauth-rs/src/adapters/: mod.rs  registry.rs  traits.rs
gauth-rs/src/crypto/: mod.rs
gauth-rs/src/management/: license.rs  lifecycle.rs  mod.rs  types.rs  validation.rs
gauth-rs/src/pep/: checks.rs  engine.rs  mod.rs  types.rs
gauth-rs/src/profiles/: mod.rs
gauth-rs/src/storage/: mod.rs
gauth-rs/src/token/: mod.rs
gauth-rs/src/types/: capabilities.rs  delegation.rs  governance.rs  mod.rs  poa.rs
gauth-rs/src/vc/: did.rs  mod.rs  openid.rs  sd_jwt.rs  serializer.rs  status_list.rs
gauth-rs/tests/: conformance_block_b.rs  integration_tests.rs
lib/api-spec/: openapi.yaml
lib/db/src/schema/: index.ts
