[package]
name = "gauth-rs"
version = "0.1.0"
edition = "2021"
authors = ["Gimel Foundation gGmbH i.G. <info@gimelfoundation.com>"]
description = "GAuth Open Core Rust SDK — AI authorization framework implementing GiFo RFCs 0110, 0111, 0115, 0116, 0117, 0118"
license = "MPL-2.0"
repository = "https://github.com/Gimel-Foundation/gauth-rs"
homepage = "https://gimelfoundation.com"
documentation = "https://docs.rs/gauth-rs"
keywords = ["gauth", "authorization", "ai-governance", "power-of-attorney", "gimel"]
categories = ["authentication", "cryptography"]
readme = "README.md"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonwebtoken = "9"
sha2 = "0.10"
ed25519-dalek = { version = "2", features = ["rand_core"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
glob-match = "0.2"
rand = "0.8"
hex = "0.4"
base64 = "0.22"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
